--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/platform-browser-dynamic": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "js-yaml": "^4.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -42,6 +43,7 @@
     "@angular/compiler-cli": "^20.3.0",
     "@schematics/angular": "^20.3.1",
     "@types/jasmine": "~5.1.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
