--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:prod": "ng serve --configuration production",
+    "start:no-proxy": "ng serve",
+    "start:prod": "ng serve --configuration production ",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
