--- a/helm-charts/configmap.yaml
+++ b/helm-charts/configmap.yaml
@@ -1,17 +1,36 @@
+# ConfigMap estándar de Kubernetes (funciona sin Helm)
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "calendar-app.fullname" . }}-config
+  name: calendar-morocco-config
+  namespace: default
   labels:
-    {{- include "calendar-app.labels" . | nindent 4 }}
+    app: calendar-morocco
+    component: config
+    environment: development
+    version: "1.0.0"
 data:
   config-options.yml: |
     configOptions:
       - labelKey: 'config.botolaD1'
-        value: '{{ .Values.config.botolaD1.value | default "schBotolaD1/SchMoroccoD1.properties" }}'
+        value: 'schBotolaD1/SchMoroccoD1.properties'
       - labelKey: 'config.botolaD2'
-        value: '{{ .Values.config.botolaD2.value | default "schBotolaD2/SchMoroccoD2.properties" }}'
+        value: 'schBotolaD2/SchMoroccoD2.properties'
       - labelKey: 'config.cnpff1'
-        value: '{{ .Values.config.cnpff1.value | default "schCNPFF1/MoroccoCNPFF1.properties" }}'
+        value: 'schCNPFF1/MoroccoCNPFF1.properties'
       - labelKey: 'config.cnpff2'
-        value: '{{ .Values.config.cnpff2.value | default "schCNPFF2/MoroccoCNPFF2.properties" }}'
+        value: 'schCNPFF2/MoroccoCNPFF2.properties'
+
+  # Configuración adicional para diferentes entornos
+  application.properties: |
+    # Spring Boot configuration
+    server.port=8080
+    spring.application.name=calendar-morocco
+
+    # Logging configuration
+    logging.level.com.morocco.calendar=INFO
+    logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+    # File upload configuration
+    spring.servlet.multipart.max-file-size=10MB
+    spring.servlet.multipart.max-request-size=10MB
