--- a/package.json
+++ b/package.json
@@ -24,34 +24,35 @@
     ]
   },
   "dependencies": {
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/platform-browser-dynamic": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/animations": "^21.0.7",
+    "@angular/common": "^21.0.7",
+    "@angular/compiler": "^21.0.7",
+    "@angular/core": "^21.0.7",
+    "@angular/forms": "^21.0.7",
+    "@angular/platform-browser": "^21.0.7",
+    "@angular/platform-browser-dynamic": "^21.0.7",
+    "@angular/router": "^21.0.7",
     "js-yaml": "^4.1.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.8.1",
+    "zone.js": "^0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.1",
-    "@angular-devkit/core": "^20.3.1",
-    "@angular-devkit/schematics": "^20.3.1",
-    "@angular/cli": "^20.3.1",
-    "@angular/compiler-cli": "^20.3.0",
-    "@schematics/angular": "^20.3.1",
-    "@types/jasmine": "~5.1.0",
+    "@angular-devkit/build-angular": "^21.0.5",
+    "@angular-devkit/core": "^21.0.5",
+    "@angular-devkit/schematics": "^21.0.5",
+    "@angular/cli": "^21.0.5",
+    "@angular/compiler-cli": "^21.0.7",
+    "@schematics/angular": "^21.0.5",
+    "@types/jasmine": "^5.1.13",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^20.17.19",
-    "jasmine-core": "~5.9.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "@types/node": "^25.0.3",
+    "jasmine-core": "~5.13.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "typescript": "~5.9.0"
   }
 }
